syntax = "proto3";

package runtime.v1;

import "internal/protobufio/v1/log.proto";
import "runtime/v1/spec.proto";

option go_package = "github.com/frantjc/sequence/runtime/v1;runtimev1";

message Container {
  string id = 1;
}

service ContainerService {
  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse);
  rpc GetContainer(GetContainerRequest) returns (GetContainerResponse);
  rpc ExecContainer(ExecContainerRequest) returns (stream ExecContainerResponse);
  rpc StartContainer(StartContainerRequest) returns (StartContainerResponse);
  rpc AttachContainer(AttachContainerRequest) returns (stream AttachContainerResponse);
  rpc RemoveContainer(RemoveContainerRequest) returns (RemoveContainerResponse);
  rpc PruneContainers(PruneContainersRequest) returns (PruneContainersResponse);
  rpc CopyToContainer(CopyToContainerRequest) returns (CopyToContainerResponse);
  rpc CopyFromContainer(CopyFromContainerRequest) returns (CopyFromContainerResponse);
}

message CreateContainerRequest {
  runtime.v1.Spec spec = 1;
}

message CreateContainerResponse {
  runtime.v1.Container container = 1;
}

message GetContainerRequest {
  string id = 1;
}

message GetContainerResponse {
  runtime.v1.Container container = 1;
}

message ExecContainerRequest {
  string id = 1;
}

message ExecContainerResponse {
  internal.protobufio.v1.Log log = 1;
}

message StartContainerRequest {
  string id = 1;
}

message StartContainerResponse {
  runtime.v1.Container container = 1;
}

message AttachContainerRequest {
  string id = 1;
}

message AttachContainerResponse {
  internal.protobufio.v1.Log log = 1;
}

message RemoveContainerRequest {
  string id = 1;
}

message RemoveContainerResponse {}

message PruneContainersRequest {}

message PruneContainersResponse {}

message CopyToContainerRequest {
  string id = 1;
  string destination = 2;
  bytes content = 3;
}

message CopyToContainerResponse {}

message CopyFromContainerRequest {
  string id = 1;
  string source = 2;
}

message CopyFromContainerResponse {
  bytes content = 1;
}
